bee-common/bee-packable-derive/tests/fail/duplicated_tag_enum.stderr
error[E0080]: evaluation of constant value failed
  --> tests/fail/duplicated_tag_enum.rs:10:10
   |
10 | #[derive(Packable)]
   |          ^^^^^^^^ the evaluated program panicked at 'The tags for the variants `None` and `Some` of enum `OptI32` are equal', $DIR/tests/fail/duplicated_tag_enum.rs:10:10
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` (in Nightly builds, run with -Z macro-backtrace for more info)
